--- a/styles/MiniProjects.module.css
+++ b/styles/MiniProjects.module.css
@@ -16,7 +16,7 @@
 }
 
 .card_project_title {
-  margin: 0 20px 0px 0;
+  margin: 0 10px 0px 0;
   font-family: Roboto;
   font-weight: normal;
   font-size: 24px;
@@ -61,7 +61,9 @@
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {}
 
 /* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {}
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+
+}
 
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
