--- a/components/ScrollButton/ScrollB.module.css
+++ b/components/ScrollButton/ScrollB.module.css
@@ -3,15 +3,15 @@
   height: 60px;
   display: flex;
   position: relative;
-  top: -150px;  
+  top: -110px;  
 }
 
 .loader {
-  width: 48px;
-  height: 78px;
+  width: 38px;
+  height: 62px;
   position: relative;
   box-sizing: border-box;
-  border: 2px solid #a5a5a5;
+  border: 2px solid rgba(189,189,189, 0.3);
   margin: auto;
   border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%;
 }
@@ -24,32 +24,90 @@
   transform: translateX(-50%);
   width: 4px;
   height: 4px;
-  background: #a5a5a5;
+  background: rgba(189,189,189, 0.3);
   border-radius: 10px;
   animation: scrollDown 1.5s linear infinite;
 }
 
 @keyframes scrollDown {
   0% {
-    top: 15px;
+    top: 12px;
     height: 4px;
     opacity: 1;
   }
 
   33% {
-    top: 15px;
-    height: 40px;
+    top: 12px;
+    height: 30px;
   }
 
   66% {
-    top: 50px;
+    top: 40px;
     height: 10px;
     opacity: 1;
   }
 
   100% {
-    top: 56px;
-    height: 4px;
+    top: 40px;
+    height: 0px;
     opacity: 0;
+  }
+}
+
+@media only screen and (min-width : 1224px) {
+  .loaderContainer {
+    width: 100vw;
+    height: 60px;
+    display: flex;
+    position: relative;
+    top: -110px;  
+  }
+  
+  .loader {
+    width: 48px;
+    height: 78px;
+    position: relative;
+    box-sizing: border-box;
+    border: 2px solid rgba(189,189,189, 0.3);
+    margin: auto;
+    border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%;
+  }
+  
+  .loader::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    transform: translateX(-50%);
+    width: 4px;
+    height: 4px;
+    background: rgba(189,189,189, 0.3);
+    border-radius: 10px;
+    animation: scrollDown 1.5s linear infinite;
+  }
+
+  @keyframes scrollDown {
+    0% {
+      top: 15px;
+      height: 4px;
+      opacity: 1;
+    }
+  
+    33% {
+      top: 15px;
+      height: 40px;
+    }
+  
+    66% {
+      top: 50px;
+      height: 10px;
+      opacity: 1;
+    }
+  
+    100% {
+      top: 56px;
+      height: 4px;
+      opacity: 0;
+    }
   }
 }
