--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -61,25 +61,23 @@
   transition: 0.1s linear;
 }
 
-.headers_mobile>h2 {
+.headers_mobile>h1 {
   color: var(--white);
-  font-size: 42px;
   font-weight: 400;
-  margin: 8px 25px 17px 36px;
+  margin: 8px 25px 12px 36px;
   line-height: normal;
   animation: fadeUpInH2 1s ease-in;
 }
 
-.headers_mobile>h3 {
+/* .headers_mobile>h3 {
   color: #a5a5a5;
-  font-family: 'Oswald', sans-serif;
   margin: 0px 100px 0 36px;
   font-size: 30px;
   font-weight: 100;
   line-height: normal;
   animation: fadeUpInH3 3s ease-in;
   transition-delay: 2s;
-}
+} */
 
 .homeCTA {
   margin: 24px 10px 0 42px;
@@ -103,12 +101,11 @@
   font-weight: 300;
   color: var(--green);
   transition: ease-in-out 0.5s;
-  font-family: 'Oswald', sans-serif;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 
-.homeCTA:hover >p {
+.homeCTA:hover>p {
   color: black;
 }
 
@@ -155,51 +152,39 @@
 }
 
 .container_testimonial {
-  margin-bottom: 50px;
-}
-
-.container_testimonial h3 {
-  text-align: left;
-  color: var(--white);
-  font-size: 20px;
-  margin-bottom: 8px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 600;
+  margin-bottom: 56px;
 }
 
 .container_testimonial h4 {
   text-align: left;
+  font-family: "Apercu Bold";
+  color: var(--white);
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+
+.container_testimonial h6 {
+  text-align: left;
+  text-transform: uppercase;
   color: #A5A5A5;
-  font-weight: 100;
-  font-size: 20px;
+  font-family: "Apercu Light";
   margin-top: 0px;
-  margin-bottom: 12px;
-  font-family: 'Oswald', sans-serif;
+  line-height: 12px;
+  margin-top: 16px;
+  margin-bottom: 24px;
 }
 
 .container_testimonial p {
   text-align: left;
   color: var(--white);
-  font-size: 16px;
   margin-top: 0px;
-  font-family: 'Roboto', sans-serif;
-}
-
-
-.container_testimonial h6 {
-  text-align: center;
-  color: var(--green);
-  font-size: 14px;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 200;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .leerMas {
   color: var(--green) !important;
   font-size: 20px !important;
-  font-family: 'Oswald', sans-serif !important;
+  font-family: "Apercu Regular";
+
 }
 
 
@@ -210,37 +195,14 @@
   bottom: -2px;
 }
 
-
-/* .container_our_services {
-  margin: 50px 36px 0px 36px;
-  background: url('../public/images/abstract-3d-texture-vector-black-square-pattern-background_45981-289.jpeg');
-  width: 80%;
-  height: 300px;
-  position: relative;
-}
-
-.our_serv_text {
-  color: var(--white);
-  margin: 78px 0 0 15px;
-  font-family: Roboto;
-  font-size: 30px;
-  text-align: left;
-  font-weight: 300;
-} */
-
-/* .container_last_projects {
-
-} */
-
 .growAnimation {
   animation-name: grow;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
 }
 
-.container_last_projects_text>h5 {
+.container_last_projects_text > h3 {
   margin: 50px 36px 0px 36px;
-  font-size: 30px;
   text-align: left;
   font-weight: 400;
   color: var(--white);
@@ -305,14 +267,13 @@
 
 .card_project_title {
   margin: 0 20px 0px 0;
-  font-family: Roboto;
   font-weight: normal;
   font-size: 24px;
   color: var(--white);
 }
 
 .card_project_year {
-  margin: -4px 177px 73px 2px;
+  margin: 0px 177px 73px 2px;
   font-family: 'Oswald';
   font-size: 18px;
   color: #a5a5a5;
@@ -376,13 +337,13 @@
   display: flex;
   align-items: center;
   margin: 6px 8px 5px 13px;
-  font-family: Roboto;
-  font-size: 16px;
   color: var(--green)
 }
 
 .container_with_arrow>p {
   padding-right: 10px;
+  font-size: 16px;
+
 }
 
 .textAndCube {
@@ -402,26 +363,29 @@
 
 .container_sobre_nosotros {
   background-color: #232323;
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 32px;
+  padding-bottom: 72px;
   margin-left: -8px;
   margin-right: -8px;
 }
 
-.container_sobre_nosotros>h5 {
-  margin: 0 36px 30px 44px;
+.container_sobre_nosotros>h3 {
+  margin: 0 36px 16px 44px;
   font-size: 30px;
   color: #fffeed;
   font-weight: 400;
 }
 
+.teamHeader {
+  margin-top: 32px !important;
+}
+
 .sobre_nosotros_text_1 {
-  margin: 0px 36px 20px 44px;
+  margin: 0px 36px 16px 44px;
   font-size: 16px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
-  line-height: normal;
   letter-spacing: normal;
   text-align: left;
   color: #fdfad6;
@@ -430,13 +394,11 @@
 }
 
 .sobre_nosotros_text_2 {
-  margin: 20px 36px 140px 44px;
-  font-family: Roboto;
+  margin: 0px 36px 140px 44px;
   font-size: 16px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
-  line-height: normal;
   letter-spacing: normal;
   text-align: left;
   color: #fdfad6;
@@ -453,9 +415,8 @@
 
 .container_card_sn {
   width: 288px;
-  height: 589px;
+  height: auto;
   margin: 30px 0 0;
-  padding: 0 0 98px;
   border: solid 1px #fffeed;
 }
 
@@ -466,25 +427,21 @@
 
 .container_card_sn>h5 {
   margin: 16px 55px 8px 36px;
-  font-family: Roboto;
-  font-size: 24px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
-  line-height: normal;
   letter-spacing: normal;
   text-align: left;
   color: #fffeed;
 }
 
 .container_card_sn>p {
-  margin: 8px 42px 0 36px;
-  font-family: 'Oswald';
-  font-size: 18px;
+  margin: 8px 42px 26px 36px;
+  font-family: "Apercu Light";
+  font-size: 16px;
   font-weight: 100;
   font-stretch: normal;
   font-style: normal;
-  line-height: normal;
   letter-spacing: normal;
   text-align: left;
   color: #a5a5a5;
@@ -823,12 +780,14 @@
   }
 
   .headers_mobile>h2 {
+    font-family: "Apercu Bold";
     font-size: 5.5em;
     font-weight: 200;
     margin: 8px 600px 17px 500px;
   }
 
   .headers_mobile>h3 {
+    font-family: "Apercu Bold";
     margin: 0px 100px 0 500px;
     font-size: 34px;
     font-weight: 100;
@@ -843,6 +802,7 @@
 
   .homeCTA>p {
     padding: 0px 36px;
+    font-family: "Apercu Light";
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 20px;
@@ -979,6 +939,8 @@
   .container_with_arrow p {
     font-size: 24px;
     margin: 0;
+    font-family: "Apercu Regular";
+
   }
 
   .container_with_arrow svg {
