--- a/styles/MiniProjects.module.css
+++ b/styles/MiniProjects.module.css
@@ -3,7 +3,7 @@
   height: 300px;
   flex-grow: 0;
   margin: 34px 34px 34px 40px;
-  padding: 26px 38px 32px;
+  padding: 26px 0 38px 32px;
   border-radius: 4px;
   border: solid 1px var(--white);
   transition: 0.3s;
@@ -17,40 +17,41 @@
 
 .card_project_title {
   margin: 0 10px 0px 0;
-  font-family: Roboto;
-  font-weight: normal;
   font-size: 24px;
   color: var(--white);
 }
 
 .card_project_year {
-  margin: -4px 177px 73px 2px;
-  font-family: 'Oswald';
+  margin: 0px 177px 73px 2px;
   font-size: 18px;
   color: #a5a5a5;
 }
 
 .containerImageProject {
-  width: 196px;
-  height: 110px;
+  width: 250px;
+  max-height: 154px;
   overflow: hidden;
   border-radius: 4px 0 0 4px;
   position: absolute;
   right: 0;
-  bottom: 34px;
 }
 
-.containerImageProject>img {
-  width: auto;
-  height: auto;
-  margin-top: -30px;
-}
 
-.card_project {
+.card_project img {
   box-sizing: border-box;
   display: block;
   overflow: hidden;
-  width: 218px;
+  width: 252px;
+}
+
+.projImage {
+  transition: 0.5s
+}
+
+
+.projImage:hover {
+  transform: scale(1.1);
+  transition: 0.5s
 }
 
 
@@ -73,8 +74,20 @@
 /* Desktops and laptops ----------- */
 @media only screen and (min-width : 1224px) {
 
-  .containerCard3, .containerCard5{
-    margin-left: 70px;
+  .card_project {
+    width: 360px;
+    margin-left: 20%;
+    height: 360px;
+    cursor: pointer;
+  }
+
+  .containerImageProject {
+    width: 353px;
+    height: 233px;
+  }
+
+  .card_project img {
+    width: 353px;
   }
 
   .card_project_title {
@@ -86,21 +99,19 @@
   }
 
 
-  /* .containerImageProject {
+  .containerImageProject {
     width: 368px;
     max-height: 184px;
-    top: 180px;
     overflow: hidden;
     border-radius: 4px 0 0 4px;
     position: absolute;
-    right: 0;
-    /* bottom: 34px; */
-  /* } */ 
+    right: -14px;
+  } 
 
   /* .containerImageProject>img {
 
     margin-top: -30px;
-  } */
+  }
 
   
 
@@ -172,6 +183,8 @@
   to {
     opacity: 0;
   }
+}
+*/
 }
 
 /* Large screens ----------- */
