--- a/styles/news.module.css
+++ b/styles/news.module.css
@@ -123,7 +123,7 @@
     background-repeat: no-repeat;
     background-position: center;
     margin-left: 13%;
-
+    z-index: -1;
 
     display: block;
     background-size: 15%;
