add margin to container center in news to 1280px and up devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -893,6 +893,10 @@
     margin-right: 10%;
   }
 
+  .marginLeft {
+    margin-left: 48px;
+  }
+
   .container_mas_noticias {
     display: none;
   }
