projects layout to css grids

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -333,6 +333,9 @@
         justify-content: center;
         order: 2;
     }
+    .container_siguenos_element {
+        margin-left: 12px;
+    }
 
     .container_siguenos>a {
         margin: 10px;
