--- a/styles/Proyectos.module.css
+++ b/styles/Proyectos.module.css
@@ -22,8 +22,9 @@
   animation-name: grow;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(1,minmax(0,1fr));
+  grid-gap: 25px;
 }
 
 .logo_wrap {
@@ -89,6 +90,10 @@
     justify-content: center;
     align-items: center;
   }
+
+  .growAnimation {
+    grid-template-columns: repeat(2,minmax(0,1fr));
+  }
 }
 
 /* iPads (portrait and landscape) ----------- */
@@ -115,9 +120,6 @@
     justify-content: center;
     align-items: center;
   }
-  .growAnimation {
-  
-  }
 }
 
 /* iPads (landscape) ----------- */
@@ -129,13 +131,16 @@
     top: -21%;
   }
   .growAnimation {
-    justify-content: space-around;
+    grid-template-columns: repeat(2,minmax(0,1fr));
+    grid-gap: 120px;
   }
 }
 
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1025px) and (orientation : portrait) {
-  /* Styles */
+  .growAnimation {
+    grid-template-columns: repeat(2,minmax(0,1fr));
+  }
 }
 
 /* Desktops and laptops ----------- */
@@ -143,14 +148,14 @@
 
  
   .projectsHeader {
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
-    margin-bottom: 36px
+    margin-bottom: 96px
   }
 
   .projectsHeader>h1 {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
 
   .projectsHeader>p {
@@ -188,16 +193,17 @@
   }
 
   .growAnimation {
-    overflow-x: scroll;
-    display: flex;
-    /* -webkit-box-shadow: inset -21px 1px 42px -12px rgba(0,0,0,0.47); 
-    box-shadow: inset -21px 1px 42px -12px rgba(0,0,0,0.47); */
+    grid-template-columns: repeat(2,minmax(0,1fr));
+    grid-gap: 90px;
   }
   
 
 }
 
 /* Large screens ----------- */
-@media only screen and (min-width : 1824px) {
-  /* Styles */
+@media only screen and (min-width : 1440px) {
+  .growAnimation {
+    grid-template-columns: repeat(3,minmax(0,1fr));
+    grid-gap: 90px;
+  }
 }
