--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,7 +1,9 @@
 .heroFooter {
     display: none;
 }
-
+.topoIcon {
+    display: none;
+}
 .wrapper_contacto>h5 {
     margin: 60px 132px 24px 36px;
     font-size: 30px;
@@ -267,6 +269,13 @@
         margin: 0 6% 0 6%;
     }
 
+    .topoIcon {
+        display:block;
+        position: absolute;
+        right: 0;
+        z-index: -1;
+    }
+
     .containerFooter {
         display: flex;
         flex-direction: column;
@@ -280,7 +289,7 @@
         display: flex;
         flex-direction: column;
         margin: 0 7vw 0 7vw;
-        background-color: #181919;
+        /* background-color: #181919; */
     }
 
     .heroFooter {
@@ -333,6 +342,7 @@
         justify-content: center;
         order: 2;
     }
+
     .container_siguenos_element {
         margin-left: 12px;
     }
