--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -165,6 +165,11 @@
     color: #c4c4c4;
 }
 
+.samllText>a {
+    text-decoration: none;
+    color: #05f0d4;
+}
+
 .footerLogo {
     display: none;
 }
