--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -17,7 +17,7 @@
   top: 30px;
   right: 86px;
   width: 188px;
-  height: 270px;
+  height: 296px;
   background-color:rgba(51, 51, 51, 0.95);
   border-radius: 4px;
   z-index: 9;
@@ -124,7 +124,8 @@
 
   .nav__container {
     width: 388px;
-    height: 557px;
+    height: fit-content;
+    padding-bottom: 20px
   }
 
   .menu_item::after {
