--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -339,6 +339,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  align-content: center;
   color: var(--white);
   animation-name: grow;
   animation-duration: 0.5s;
@@ -362,6 +363,46 @@
   padding-right: 10px;
   font-size: 16px;
 
+}
+
+.container_academia {
+  margin: 40px 0 49px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--white);
+  animation-name: grow;
+  animation-duration: 0.5s;
+  animation-delay: 0.5s;
+  animation-timing-function: ease-in-out;
+}
+
+.imgAcademiaContainer {
+  width: fit-content;
+  height: auto;
+}
+
+.imgAcademia {
+  width: auto;
+  height: 375px;
+  border: 10px solid white
+}
+
+.imgAcademia>img {
+  width: 300px;
+
+}
+
+.academia_text {
+  margin: 0px 36px 0px 0px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #fdfad6;
+  max-width: 300px;
 }
 
 .textAndCube {
