--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,11 @@
   --grey: #323231;
   --green: #05f0d4;
 } */
+.caption {
+  display: block;
+  width: fit-content;
+  font-size: 20px;
+}
 
 .backgroundVideo {
   position: absolute;
@@ -46,11 +51,15 @@
   bottom: 0%;
   z-index: -1;
   background-color: #181919;
-
 }
 
 .h1_hidden {
-  font-size: 0.1px
+  font-size: 0.1px;
+}
+
+.hero_title {
+  font-weight: 400;
+  font-family: "Apercu Light";
 }
 
 .headers_mobile {
@@ -63,7 +72,7 @@
   transition: 0.1s linear;
 }
 
-.headers_mobile>h1 {
+.headers_mobile > h1 {
   color: var(--white);
   font-weight: 400;
   margin: 8px 25px 12px 36px;
@@ -87,8 +96,7 @@
   color: black;
 }
 
-
-.homeCTA>p {
+.homeCTA > p {
   padding: 0px 20px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -98,8 +106,11 @@
   font-size: 20px;
 }
 
-.homeCTA:hover>p {
+.homeCTA:hover > p {
   color: black;
+}
+.container_news_content {
+  width: 100%;
 }
 
 .newsAnchor {
@@ -160,7 +171,7 @@
 .container_testimonial_last h6 {
   text-align: left;
   text-transform: uppercase;
-  color: #A5A5A5;
+  color: #a5a5a5;
   font-family: "Apercu Light";
   margin-top: 0px;
   line-height: 12px;
@@ -185,7 +196,7 @@
 .container_testimonial h6 {
   text-align: left;
   text-transform: uppercase;
-  color: #A5A5A5;
+  color: #a5a5a5;
   font-family: "Apercu Light";
   margin-top: 0px;
   line-height: 12px;
@@ -203,9 +214,7 @@
   color: var(--green) !important;
   font-size: 20px !important;
   font-family: "Apercu Regular";
-
 }
-
 
 .chevronRight {
   width: 10px;
@@ -220,70 +229,43 @@
   animation-timing-function: ease-in-out;
 }
 
-.container_last_projects_text>h3 {
+.container_last_projects_text > h3 {
   margin: 50px 36px 0px 36px;
-  padding-bottom: 6px;
+  padding-bottom: 64px;
   text-align: left;
   font-weight: 400;
   color: var(--white);
 }
 
+.container_gallery_left {
+  display: flex;
+  flex-direction: column;
+}
+
+.containerImageOne {
+  width: auto;
+}
+
 .card_project_1 {
-  width: 252px;
-  height: 300px;
-  flex-grow: 0;
-  margin: 34px 8px 34px 40px;
-  padding: 26px 0 38px 32px;
-  border-radius: 4px;
-  border: solid 1px var(--white);
   transition: 0.3s;
   position: relative;
 }
 
 .card_project_2 {
-  width: 252px;
-  height: 300px;
-  flex-grow: 0;
-  margin: 34px 44px 34px 4px;
-  padding: 26px 0 38px 32px;
-  border-radius: 4px;
-  border: solid 1px var(--white);
   transition: 0.3s;
   position: relative;
 }
 
 .card_project_3 {
-  width: 252px;
-  height: 300px;
-  flex-grow: 0;
-  margin: 34px 27px 34px 21px;
-  padding: 26px 0 38px 32px;
-  border-radius: 4px;
-  border: solid 1px var(--white);
   transition: 0.3s;
   position: relative;
+  width: -webkit-fill-available;
 }
 
 .card_project_4 {
-  width: 252px;
-  height: 300px;
-  flex-grow: 0;
-  margin: 34px 0 0 48px;
-  padding: 26px 0 38px 32px;
-  border-radius: 4px;
-  border: solid 1px var(--white);
   transition: 0.3s;
   position: relative;
 }
-
-.card_project_1:hover,
-.card_project_2:hover,
-.card_project_3:hover,
-.card_project_4:hover {
-  border: solid 1px var(--yellow);
-  transition: 0.3s;
-}
-
 
 .card_project_title {
   margin: 0 20px 0px 0;
@@ -306,32 +288,42 @@
 }
 
 .projImage {
-  transition: 0.5s
+  transition: 0.5s;
 }
-
 
 .projImage:hover {
   transform: scale(1.1);
-  transition: 0.5s
+  transition: 0.5s;
 }
 
 .containerImageProject {
-  width: 250px;
-  max-height: 154px;
-  overflow: hidden;
+  /* width: 400px; */
+  /* overflow: hidden; */
   border-radius: 4px 0 0 4px;
-  position: absolute;
-  right: 0;
+  /* position: absolute;
+  right: 0; */
 }
 
-.card_project_1 img,
-.card_project_2 img,
+.container_gallery_1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 24px;
+}
+
+.card_project_1 {
+  width: 50%;
+}
+.card_project_2 img {
+  width: 100%;
+  /* height: 500px; */
+}
 .card_project_3 img,
 .card_project_4 img {
   box-sizing: border-box;
   display: block;
-  overflow: hidden;
-  width: 252px;
+  width: -webkit-fill-available;
 }
 
 .container_mas_proyectos {
@@ -356,13 +348,12 @@
   display: flex;
   align-items: center;
   margin: 6px 8px 5px 13px;
-  color: var(--green)
+  color: var(--green);
 }
 
-.container_with_arrow>p {
+.container_with_arrow > p {
   padding-right: 10px;
   font-size: 16px;
-
 }
 
 .container_academia {
@@ -386,12 +377,11 @@
 .imgAcademia {
   width: auto;
   height: 375px;
-  border: 10px solid white
+  border: 10px solid white;
 }
 
-.imgAcademia>img {
+.imgAcademia > img {
   width: 300px;
-
 }
 
 .academia_text {
@@ -433,7 +423,7 @@
   margin-right: -8px;
 }
 
-.container_equipo>h3 {
+.container_equipo > h3 {
   margin: 0 36px 16px 44px;
   color: #fffeed;
   font-weight: 400;
@@ -447,7 +437,7 @@
   margin-right: -8px;
 }
 
-.container_sobre_nosotros>h3 {
+.container_sobre_nosotros > h3 {
   margin: 0 36px 16px 44px;
   color: #fffeed;
   font-weight: 400;
@@ -466,7 +456,6 @@
   text-align: left;
   color: #fdfad6;
   max-width: 300px;
-
 }
 
 .sobre_nosotros_text_2 {
@@ -495,12 +484,12 @@
   border: solid 1px #fffeed;
 }
 
-.container_card_sn>img {
+.container_card_sn > img {
   width: 288px;
   height: 420px;
 }
 
-.container_card_sn>h5 {
+.container_card_sn > h5 {
   margin: 16px 55px 8px 36px;
   font-weight: normal;
   font-stretch: normal;
@@ -510,7 +499,7 @@
   color: #fffeed;
 }
 
-.container_card_sn>p {
+.container_card_sn > p {
   margin: 8px 42px 26px 36px;
   font-family: "Apercu Light";
   font-size: 16px;
@@ -547,12 +536,10 @@
 
   to {
     opacity: 1;
-
   }
 }
 
 @keyframes fadeUpInH3 {
-
   0% {
     opacity: 0;
     padding-top: 45px;
@@ -569,7 +556,6 @@
     opacity: 0;
     padding-top: 15px;
     color: var(--grey);
-    ;
   }
 
   100% {
@@ -585,7 +571,6 @@
     -webkit-transform: scale(0.95);
     -ms-transform: scale(0.95);
     transform: scale(0.95);
-
   }
 
   to {
@@ -593,25 +578,23 @@
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1);
-
   }
 }
 
-
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-width : 320px) and (max-width : 480px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   /* Styles */
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) and (orientation : landscape) {
+@media only screen and (min-width: 321px) and (orientation: landscape) {
   .headers_mobile {
     width: 100%;
     height: 100vh;
     margin-left: 30px;
   }
 
-  .headers_mobile>h1 {
+  .headers_mobile > h1 {
     font-size: 31px;
   }
 
@@ -639,7 +622,7 @@
     padding-top: 72px;
   }
 
-  .container_sobre_nosotros>h3 {
+  .container_sobre_nosotros > h3 {
     margin-left: 44px;
   }
 
@@ -650,9 +633,9 @@
     margin-bottom: 30px;
   }
 
-  .container_mas_proyectos {
-    width: 50%;
-  }
+  /* .container_mas_proyectos { */
+    /* width: 50%; */
+  /* } */
 
   .backgroundVideo {
     height: 100vh;
@@ -660,10 +643,6 @@
 
   .backgroundHover {
     height: 101vh;
-  }
-
-  .card_project_2 {
-    margin: 34px 44px 34px 56px;
   }
 
   .cubeMobile {
@@ -674,7 +653,7 @@
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   .headers_mobile {
     width: 100%;
     height: 100vh;
@@ -702,11 +681,11 @@
     margin-top: 5px;
   }
 
-  .container_sobre_nosotros>h3 {
+  .container_sobre_nosotros > h3 {
     font-size: 42px;
   }
 
-  .container_sobre_nosotros>p {
+  .container_sobre_nosotros > p {
     font-size: 18px;
   }
 
@@ -725,10 +704,6 @@
     width: 50%;
   }
 
-  .card_project_2 {
-    margin: 34px 44px 34px 56px;
-  }
-
   .leftBlock {
     width: 33vw;
     height: 100%;
@@ -744,12 +719,11 @@
 }
 
 /* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
   .backgroundVideo {
     height: 102vh;
     width: 102vw;
     display: flex;
-
   }
 
   .video {
@@ -805,7 +779,7 @@
 }
 
 /* iPads (portrait) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   .backgroundVideo {
     width: 100vw;
     height: 102vh;
@@ -836,16 +810,14 @@
 }
 
 /* Desktops and laptops ----------- */
-@media only screen and (min-width : 1224px) {
+@media only screen and (min-width: 1224px) {
   .backgroundVideo {
     height: 100vh;
     z-index: -2;
   }
 
   .backgroundHover {
-
     height: 100vh;
-
   }
 
   .video {
@@ -874,13 +846,12 @@
     margin-bottom: 14px;
   }
 
-  .headers_mobile>h1 {
-    font-family: "Apercu Bold";
+  .headers_mobile > h1 {
+    font-family: "Apercu Light";
     font-size: 3.5em;
     font-weight: 200;
     margin: 8px 25% 17px 25%;
   }
-
 
   .homeCTA {
     margin: 36px 100px 0 25%;
@@ -888,8 +859,7 @@
     border-radius: 4px;
   }
 
-
-  .homeCTA>p {
+  .homeCTA > p {
     padding: 0px 36px;
     font-family: "Apercu Light";
     margin-top: 20px;
@@ -906,6 +876,14 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+  }
+
+  .container_gallery_1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: end;
+    gap: 3rem;
   }
 
   .quotes {
@@ -931,7 +909,7 @@
     padding-left: 3.1%;
   }
 
-  .container_with_arrow>img {
+  .container_with_arrow > img {
     width: 300px;
   }
 
@@ -948,8 +926,23 @@
     display: none;
   }
 
-  .container_last_projects_text>h3 {
+  .container_last_projects_text > h3 {
     margin: 36px 36px 0px 36px;
+  }
+
+  .container_gallery_three {
+    display: flex;
+    width: -webkit-fill-available;
+  }
+
+  .container_gallery_left {
+    display: flex;
+    flex-direction: column;
+    width: -webkit-fill-available;
+  }
+
+  .imgOne {
+    max-width: 470px;
   }
 
   .container_sobre_nosotros {
@@ -959,7 +952,7 @@
     align-content: center;
   }
 
-  .container_sobre_nosotros>h3 {
+  .container_sobre_nosotros > h3 {
     padding-bottom: 32px;
   }
 
@@ -973,8 +966,6 @@
     color: #fdfad6;
     max-width: 300px;
     padding-bottom: 24px;
-
-
   }
 
   .sobre_nosotros_text_2 {
@@ -996,7 +987,7 @@
     width: 40px !important;
   }
 
-  .container_sobre_nosotros>h3 {
+  .container_sobre_nosotros > h3 {
     margin: 0;
   }
 
@@ -1026,31 +1017,8 @@
     margin-top: 5%;
   }
 
-  .container_last_projects_text>h5 {
+  .container_last_projects_text > h5 {
     font-size: 58px;
-  }
-
-  .card_project_1 {
-    width: 360px;
-    margin-left: 20%;
-    height: 360px;
-    cursor: pointer;
-  }
-
-  .card_project_2 {
-    margin-top: 10%;
-    margin-left: 10%;
-    width: 360px;
-    height: 360px;
-    cursor: pointer;
-  }
-
-  .card_project_3 {
-    margin-left: 10%;
-    margin-top: 0;
-    width: 360px;
-    height: 360px;
-    cursor: pointer;
   }
 
   .container_with_arrow {
@@ -1063,7 +1031,7 @@
     background-color: var(--grey);
     font-size: 400px;
     border-radius: 4px;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
 
   .container_with_arrow img {
@@ -1076,7 +1044,6 @@
     font-size: 24px;
     margin: 0;
     font-family: "Apercu Regular";
-
   }
 
   .container_with_arrow svg {
@@ -1084,16 +1051,14 @@
     padding-right: 10px;
   }
 
-  .containerImageProject {
-    width: 353px;
-    height: 233px;
+  .containerImageProject1 {
+    width: 50%;
+    /* height: 233px; */
   }
 
-  .card_project_1 img,
-  .card_project_2 img,
-  .card_project_3 img,
-  .card_project_4 img {
-    width: 353px;
+  .containerImageProject2 {
+    width: 80%;
+    /* height: 233px; */
   }
 
   .equipo_cards {
@@ -1103,22 +1068,7 @@
     margin-bottom: 80px;
   }
 
-
-  /* @keyframes fadeUpInH2 {
-    0% {
-      opacity: 0;
-      font-size: 3em;
-      margin-right: 200px
-    }
-
-    100% {
-      opacity: 1;
-      font-size: 5.5em;
-    }
-  } */
-
   @keyframes fadeUpInH3 {
-
     0% {
       opacity: 0;
     }
@@ -1129,21 +1079,16 @@
 
     50% {
       opacity: 0.6;
-      ;
     }
 
     100% {
       opacity: 1;
     }
-
   }
-
-
-
 }
 
 /* Large screens ----------- */
-@media only screen and (min-width : 1824px) {
+@media only screen and (min-width: 1824px) {
   .backgroundVideo {
     width: 100vw;
     height: 102vh;
@@ -1161,6 +1106,4 @@
     left: 40%;
     z-index: -1;
   }
-
-
 }
