--- a/styles/CatedralDeToledo.module.css
+++ b/styles/CatedralDeToledo.module.css
@@ -3,6 +3,7 @@
 }
 
 .content {
+ 
     text-align: center;
     padding: 40px;
     margin-top: 64px;
@@ -42,18 +43,40 @@
 
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-    
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .content h1 {
+        text-align: center;
+    }
+    .content p {
+        text-align: center;
+    }
 }
 
 /* Desktops and laptops ----------- */
 @media only screen and (min-width : 1224px) {
     .logo_wrap {
-    display: block;
-    width: 160px;
-    margin-top: 56px;
-    margin-left: 56px;
-    cursor: pointer;
-}
+        display: block;
+        width: 160px;
+        margin-left: 56px;
+        cursor: pointer;
+    }
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .content h1 {
+        text-align: center;
+    }
+    .content p {
+        text-align: center;
+    }   
 }
 
 /* Large screens ----------- */
